--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "firebase-tools": "^12.4.6",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
